# Bazel-Hands-On

./: .gitignore  LICENSE  README.md
stage01/: README.md
stage01/main/: BUILD.bazel  hello-world.cc
stage02/: README.md
stage02/main/: BUILD.bazel  hello-world.cc
stage03/: README.md
stage03/lib/: hello-time.h
stage03/main/: hello-greet.cc
stage04/: README.md  WORKSPACE
stage05/: MODULE.bazel  README.md
stage05/main/: BUILD.bazel
stage05/modules/tachyon/: metadata.json
stage05/modules/tachyon/v0.1.0/: MODULE.bazel
stage05/modules/tachyon/v0.2.0/: MODULE.bazel  source.json
stage05/tests/: BUILD.bazel
stage06/: README.md  WORKSPACE
stage06/main/: hello-greet.h
stage06/tests/: hello-greet-test.cc
stage07/: BUILD.bazel  README.md  simple.bzl
stage07/simple/: BUILD.bazel  simple.bzl
stage08/: BUILD.bazel  README.md  printer.bzl
stage09/: BUILD.bazel  README.md  make-file.bzl
