###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "stage05",
    repo_name= "bazel_hands_on_stage05"
)

bazel_dep(name = "rules_cc", version = "0.0.9", repo_name = "rules_cc")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
